--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,71 +1,100 @@
 * {
-    border:        none;
+    border: none;
     border-radius: 0;
-    font-family:   Sans;
-    font-size:     15px;
-    box-shadow:    none;
-    text-shadow:   none;
-    transition-duration: 0s;
+    font-family: "Ubuntu Nerd Font";
+    font-size: 16px;
+    min-height: 0;
 }
 
-window {
-    color:      rgba(217, 216, 216, 1);
-    background: rgba(35, 31, 32, 0.00);
+window#waybar {
+    background: transparent;
+    color: white;
 }
 
-window#waybar.solo {
-    color:      rgba(217, 216, 216, 1);
-    background: rgba(35, 31, 32, 0.85);
+#window {
+    font-weight: bold;
+    font-family: "Ubuntu";
 }
-
+/*
 #workspaces {
-    margin: 0 5px;
+    padding: 0 5px;
 }
+*/
 
 #workspaces button {
-    padding:    0 5px;
-    color:      rgba(217, 216, 216, 0.4);
-}
-
-#workspaces button.visible {
-    color:      rgba(217, 216, 216, 1);
+    padding: 0 5px;
+    background: transparent;
+    color: white;
+    border-top: 2px solid transparent;
 }
 
 #workspaces button.focused {
-    border-top: 3px solid rgba(217, 216, 216, 1);
-    border-bottom: 3px solid rgba(217, 216, 216, 0);
+    color: #c9545d;
+    border-top: 2px solid #c9545d;
 }
 
-#workspaces button.urgent {
-    color:      rgba(238, 46, 36, 1);
+#mode {
+    background: #64727D;
+    border-bottom: 3px solid white;
 }
 
-#mode, #battery, #cpu, #memory, #network, #pulseaudio, #idle_inhibitor, #backlight, #custom-storage, #custom-spotify, #custom-weather, #custom-mail {
-    margin:     0px 6px 0px 10px;
-    min-width:  25px;
+#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode {
+    padding: 0 3px;
+    margin: 0 2px;
 }
 
 #clock {
-    margin:     0px 16px 0px 10px;
-    min-width:  140px;
+    font-weight: bold;
 }
 
-#battery.warning {
-   color:       rgba(255, 210, 4, 1);
+#battery {
 }
 
-#battery.critical {
-    color:      rgba(238, 46, 36, 1);
+#battery icon {
+    color: red;
 }
 
 #battery.charging {
-    color:      rgba(217, 216, 216, 1);
 }
 
-#custom-storage.warning {
-    color:      rgba(255, 210, 4, 1);
+@keyframes blink {
+    to {
+        background-color: #ffffff;
+        color: black;
+    }
 }
 
-#custom-storage.critical {
-    color:      rgba(238, 46, 36, 1);
+#battery.warning:not(.charging) {
+    color: white;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+#cpu {
+}
+
+#memory {
+}
+
+#network {
+}
+
+#network.disconnected {
+    background: #f53c3c;
+}
+
+#pulseaudio {
+}
+
+#pulseaudio.muted {
+}
+
+#custom-spotify {
+    color: rgb(102, 220, 105);
+}
+
+#tray {
 }
