--- a/dot-config/waybar/horizontal/style.css
+++ b/dot-config/waybar/horizontal/style.css
@@ -1,17 +1,15 @@
-/* From https://github.com/hekatonkheirex/dotfiles-sway */
-/* General configuration */
-* {
+/* General configuration */ * {
   border: none;
-  font-family: "SF Pro Display","Font Awesome 6 Free Regular","Font Awesome 6 Free Solid","Font Awesome 6 Pro Regular","Font Awesome 6 Pro Thin","Font Awesome 6 Pro Solid","Font Awesome 6 Pro Light","Font Awesome 6 Brands Regular";
+  font-family: "Inter","Font Awesome 6 Free","Font Awesome 6 Pro","Font Awesome 6 Brands";
   font-size: 14px;
   font-weight: normal;
 }
 
 window#waybar {
-  background-color: #1e1e2e;
+  background: rgba(30, 30, 46, 1.0);
   transition-property: background-color;
   transition-duration: .5s;
-  border-radius: 12px 12px 12px 12px;
+  border-radius: 0px 0px 0px 0px;
 }
 
 window#waybar.hidden {
@@ -20,14 +18,16 @@ window#waybar.hidden {
 
 tooltip {
   background: rgba(30, 30, 46, 0.7);
-  border: 1px solid rgba(49, 50, 68, 0.7);
+  border: 1px solid rgba(180, 190, 254, 0.7);
 }
 tooltip label {
-  color: #89b4fa;
+  color: #b4befe;
 }
 
 /* Workspaces */
-#workspaces,
+#workspaces {
+  padding: 0 12px;
+}
 
 #workspaces button {
   min-width: 10px;
@@ -35,7 +35,7 @@ tooltip label {
   padding: 0 12px;
 }
 #workspaces button:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
 }
 #workspaces button.focused {
@@ -45,22 +45,34 @@ tooltip label {
   color: #f38ba8;
 }
 #workspaces button.persistent {
-  color: #7f849c;
+  color: #45475a;
 }
 
 window#waybar.empty #window {
   background-color: transparent;
 }
 
+/* Logo */
+#image-logo {
+ padding: 0 12px;
+}
+
+#window {
+  color: #b4befe;
+  padding: 0 12px;
+}
+
 /* Language */
 #language {
-  color: #7f849c;
+  color: #f5e0dc;
+  margin-right: 5px;
   padding: 0 12px;
 }
 
 /* Idle inhibitor */
 #idle_inhibitor {
-  color: #7f849c;
+  color: #45475a;
+  margin-right: 5px;
   padding: 0 12px;
 }
 #idle_inhibitor.activated {
@@ -70,12 +82,14 @@ window#waybar.empty #window {
 /* Backlight */
 #backlight {
   color: #f9e2af;
+  margin-right: 5px;
   padding: 0 12px;
 }
 
 /* Volume */
 #pulseaudio {
-  color: #89b4fa;
+  color: #a6e3a1;
+  margin-right: 5px;
   padding: 0 12px;
 }
 #pulseaudio.muted {
@@ -85,6 +99,7 @@ window#waybar.empty #window {
 /* Battery */
 #battery {
   color: #f38ba8;
+  margin-right: 5px;
   padding: 0 12px;
 }
 #battery.charging, #battery.plugged {
@@ -107,22 +122,24 @@ window#waybar.empty #window {
 
 /* Tray */
 #tray {
-  background: #313244;
+  background-color: #45475a;
+  margin-right: 5px;
   padding: 0 12px;
 }
 
 /* Clock */
 #clock {
   color: #cdd6f4;
-  font-family: "Inter Medium";
+  font-family: "Inter Black";
   font-size: 18px;
-  margin-right: 5px;
   padding: 0 12px;
 }
 
 /* Spotify */
 #custom-spotify {
   color: #a6e3a1;
+  margin-left: 5px;
+  padding: 0 12px;
 }
 
 #custom-media,
@@ -132,44 +149,18 @@ window#waybar.empty #window {
 #cpu,
 #memory,
 #disk,
+#custom-space {
+  margin-left: 5px;
+}
 
 /* Weather */
-#custom-weather {
+#custom-wttr {
   padding: 0 12px;
-}
-#custom-weather.severe {
-    color: #f38ba8;
-}
-#custom-weather.sunnyDay {
-    color: #f9e2af;
-}
-#custom-weather.clearNight {
-    color: #cdd6f4;
-}
-#custom-weather.cloudyFoggyDay, #custom-weather.cloudyFoggyNight {
-    color: #585b70;
-}
-#custom-weather.rainyDay, #custom-weather.rainyNight {
-    color: #cba6f7;
-}
-#custom-weather.showyIcyDay, #custom-weather.snowyIcyNight {
-    color: #89dceb;
-}
-#custom-weather.default {
-    color: #b4befe;
-}
-
-/* Logo */
-#custom-logo {
-  font-size: 18px;
-  color: #cba6f7;
-  margin-left: 16px;
 }
 
 /* Power */
 #custom-power {
   font-size: 18px;
   color: #f38ba8;
-  margin-right: 16px;
+  padding: 0 12px;
 }
-
